# NottCreatureAPI

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: graph-context-prompt.mjs  graph-context-prompt.sh  post-tool-use-tracker.sh  skill-activation-prompt.mjs  skill-activation-prompt.sh
.claude/skills/: skill-rules.json
.claude/skills/admin-api/: skill.md
.claude/skills/base/: skill.md
.claude/skills/infrastructure/: skill.md
.claude/skills/public-api/: skill.md
.claude/skills/rate-limiting/: skill.md
services/admin-api/: .env.example  Dockerfile  pyproject.toml
services/admin-api/app/: config.py  logging.py
services/public-api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/public-api/app/: auth.py  config.py  limits.py  logging.py  main.py  rate_limit.py
services/public-api/app/db/: firestore.py
services/public-api/app/keys/: generator.py  invite.py
services/public-api/app/models/: __init__.py  card.py  common.py  key.py  set.py
services/public-api/app/routers/: cards.py  health.py  keys.py  sets.py
services/public-api/config/: limits.yaml
services/public-api/tests/: conftest.py  test_cards.py  test_health.py  test_keys.py  test_sets.py
tasks/: todo.md
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: backend.tf.example  main.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  (+1 more)
(+8 files in other folders)
