[project]
name = "admin-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "google-cloud-firestore>=2.26.0",
    "google-cloud-storage>=3.10.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
